work on styles and layout

--- a/shifts/templates/shifts/shifts.html
+++ b/shifts/templates/shifts/shifts.html
@@ -18,12 +18,11 @@
             Would you like to <b>release</b> this shift for others?
         {{/if}}
       </p>
-      <p>
-        - {{department}}
-        - {{time}}
-        - {{shift_length}}
-        - {{display_text}}
-      </p>
+      <blockquote>
+        <b>{{department}}</b><br />
+        {{start}}<br />
+        Shift Length: <b>{{ shift_length }}</b> hours<br />
+      </blockquote>
       <ul class="errors">
       </ul>
       {{#if restricted}}
@@ -65,9 +64,19 @@
                                 {% for cell in row.tabular %}
                                     <td class="{{ cell.classes }}" colspan="{{ cell.columns }}">
                                         {% if cell.shift %}
-                                        <a id="shift-button-{{ cell.shift.pk }}" class="shift-toggle {% if cell.shift.owner %} claimed-shift {% else %} open-shift {% endif %} " href="#" data-shift="{{ cell.shift.pk }}" data-restricted="{{ cell.shift.requires_code|yesno:'true,false' }}" data-owner="{{ cell.shift.owner|default:'null' }}">
+                                        <a id="shift-button-{{ cell.shift.pk }}" 
+                                           alt=""
+                                           title="{{ cell.shift.department }} @ {{ cell.shift.start_time|date:"l, n/j @ h:ia" }} for {{ cell.shift.shift_length }} hours"
+                                           class="shift-toggle {% if cell.shift.owner %}  claimed-shift {% if user.is_authenticated and user.pk != cell.shift.owner.pk %} locked {} {% endif %} {% else %} open-shift {% endif %}" 
+                                           href="#" 
+                                           data-shift="{{ cell.shift.pk }}" 
+                                           data-restricted="{{ cell.shift.requires_code|yesno:'true,false' }}" 
+                                           data-owner="{{ cell.shift.owner|default:'null' }}" 
+                                           data-department="{{ cell.shift.department }}" 
+                                           data-start="{{ cell.shift.start_time|date:"l, n/j @ h:ia" }}" 
+                                           data-shift-length="{{ cell.shift.shift_length }}">
                                                 {% if cell.shift.owner %}
-                                                    {{ cell.shift.owner|truncatechars:8 }}
+                                                    {{ cell.shift }}
                                                 {% else %}
                                                     o p e n
                                                 {% endif %}
