Add support for shifts that span midnight

--- a/shifts/templates/shifts/shifts.html
+++ b/shifts/templates/shifts/shifts.html
@@ -67,7 +67,7 @@
                                         <a id="shift-button-{{ cell.shift.pk }}" 
                                            alt=""
                                            title="{{ cell.shift.department }} @ {{ cell.shift.start_time|date:"l, n/j @ h:ia" }} for {{ cell.shift.shift_length }} hours"
-                                           class="shift-toggle {% if cell.shift.owner %}  claimed-shift {% if user.is_authenticated and user.pk != cell.shift.owner.pk %} locked {} {% endif %} {% else %} open-shift {% endif %}" 
+                                           class="shift-toggle shift-{{ cell.shift.pk }}{% if cell.shift.owner %} claimed-shift{% if user.is_authenticated and user.pk != cell.shift.owner.pk %} locked{% endif %}{% else %} open-shift{% endif %}" 
                                            href="#" 
                                            data-shift="{{ cell.shift.pk }}" 
                                            data-restricted="{{ cell.shift.requires_code|yesno:'true,false' }}" 
@@ -75,12 +75,12 @@
                                            data-department="{{ cell.shift.department }}" 
                                            data-start="{{ cell.shift.start_time|date:"l, n/j @ h:ia" }}" 
                                            data-shift-length="{{ cell.shift.shift_length }}">
-                                                {% if cell.shift.owner %}
-                                                    {{ cell.shift }}
-                                                {% else %}
-                                                    o p e n
-                                                {% endif %}
-                                            </a>
+                                            {% if cell.shift.owner %}
+                                                {{ cell.shift }}
+                                            {% else %}
+                                                o p e n
+                                            {% endif %}
+                                        </a>
                                         {% endif %}
                                     </td>
                                 {% endfor %}
