--- a/volunteer/templates/base.html
+++ b/volunteer/templates/base.html
@@ -53,6 +53,7 @@
             <a href="{% url 'home' %}">Home</a> 
             <a href="{% url 'shifts' %}">Shifts</a> 
             <a href="{% url 'departments' %}">Depts</a> 
+            <a href="{% url 'leaderboard' %}">LeaderBoard</a> 
         </nav>        
         {% block content %}
         {% endblock content %}
