--- a/volunteer/templates/base.html
+++ b/volunteer/templates/base.html
@@ -43,7 +43,7 @@
                     {% if user.is_admin %}
                       <a href="/admin">Admin</a>
                     {% endif %}
-                    <a href="{% url 'profile' %}">Account</a>             
+                    <a href="{% url 'profile' %}">Profile</a>             
                     <a href="{% url 'logout' %}">logout <span class="dtonly">{{ user.get_full_name }}</span></a>
                 {% else %}
                 <a href="{% url 'register' %}">Register</a>
@@ -51,8 +51,10 @@
                 {% endif %}
             </span>
             <a href="{% url 'home' %}">Home</a> 
-            <a href="{% url 'shifts' %}">Shifts</a> 
-            <a href="{% url 'leaderboard' %}">LeaderBoard</a> 
+            {% if user.is_authenticated %}
+                <a href="{% url 'shifts' %}">Shifts</a> 
+                <a href="{% url 'leaderboard' %}">LeaderBoard</a> 
+            {% endif %}
         </nav>        
         {% block content %}
         {% endblock content %}
