--- a/accounts/templates/accounts/profile_edit.html
+++ b/accounts/templates/accounts/profile_edit.html
@@ -7,7 +7,7 @@
 
 <form action="{% url 'profile_edit' %}" method="post">{% csrf_token %}
     {% include 'partials/form_as_fieldsets.html' %}
-    <input type="submit" />
+    <input type="submit" name="Update" />
 </form>
 
 	</section>
