--- a/volunteer/templates/home.html
+++ b/volunteer/templates/home.html
@@ -33,7 +33,7 @@
 
                     <p>Hi There Lovelie,</p>
                     <p>Welcome to Apogaea's volunteer network. The webmonkies needed help 
-                        introducing you to the new online database so I'm volunteered 
+                        introducing you to the new online database so I volunteered 
                         to lend a hand. You can thank me later.</p>
                     <p>Do you want to volunteer for Apogaea 2014: Emergence? If so, I've got the links you'll need to get there.
                        If you have an account, you just need to <b><a href="{% url 'login' %}">login</a></b>. 
