Add password change and i have a ticket checkbox

--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -2,10 +2,10 @@
 {% block body_class %}{{ block.super }} home{% endblock %}
 
 {% block content %}
-    <h1><span>Edit Profile</span></h1>
+    <h1><span>Change Password</span></h1>
     <section>
 
-<form action="{% url 'profile_edit' %}" method="post">{% csrf_token %}
+<form action="{% url 'password_change' %}" method="post">{% csrf_token %}
     {% include 'partials/form_as_fieldsets.html' %}
     <input type="submit" value="Update" />
       <a href="{% url 'profile' %}" class="buttonize">Cancel</a>
