--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -16,5 +16,6 @@
             <dd>{{ user.profile.phone }}</dd>
       </dl>
       <a href="{% url 'profile_edit' %}" class="buttonize">Edit Profile</a>
+      <a href="{% url 'password_change' %}" class="buttonize">Change Password</a>
     </section>
 {% endblock %}
