--- a/departments/templates/departments/department_list.html
+++ b/departments/templates/departments/department_list.html
@@ -7,9 +7,14 @@
     <h1><span>Departmental Structure</span></h1>
     <section>
     	<h2><span>Departments</span></h2>
-{% for dept in department_list %}
-    <div><span class="headleft">{{ dept.name }}</span><span class="standard">{{ dept.description }}</span></div>
-{% endfor %}
+      {% for department in object_list %}
+          <div>
+              <span class="headleft">
+                <a href="{% url 'department_detail' pk=department.pk %}">{{ department }}</a>
+              </span>
+              <span class="standard">{{ department.description }}</span>
+          </div>
+      {% endfor %}
 
 		<hr class="close" />
 	</section>
