many more style tweaks, google analytics added, layout and spelling fixes

--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -8,7 +8,7 @@
 
 <form action="{% url 'register' %}" method="post">{% csrf_token %}
     {% include 'partials/form_as_fieldsets.html' %}
-    <input type="submit" />
+    <br /><input type="submit" />
 </form>
 
 	</section>
