--- a/volunteer/templates/home.html
+++ b/volunteer/templates/home.html
@@ -51,8 +51,8 @@
                 {% endif %}
 
             </div>
-            <div class="thoughtBubble dtonly">&nbsp;&nbsp;&nbsp;<br />&nbsp;</div>
-            <div class="thoughtBubble dtonly">&nbsp;</div>
+            <div class="thoughtBubble above800">&nbsp;&nbsp;&nbsp;<br />&nbsp;</div>
+            <div class="thoughtBubble above800">&nbsp;</div>
             <img src="{% static 'img/Flaming_Art.png' %}" />
         </div>
     </section>
